--- a/src/_data/package.yaml
+++ b/src/_data/package.yaml
@@ -1,38 +1,43 @@
 {
-  "name": "matreshka",
-  "version": "1.3.2",
-  "description": "Event-driven JavaScript framework",
-  "bugs": {
-    "url": "https://github.com/finom/matreshka/issues"
-  },
-  "author": {
-    "name": "Andrey Gubanov",
-    "email": "a@odessite.com.ua"
-  },
-  "main": "matreshka.js",
-  "license": "MIT",
-  "homepage": "http://matreshka.io",
-  "devDependencies": {
-    "amdclean": "^2.7.0",
-    "babel": "^5.8.21",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-karma": "^0.12.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.1",
-    "jasmine-core": "^2.3.4",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-requirejs": "^0.2.2",
-    "phantomjs": "^1.9.18",
-    "requirejs": "^2.1.20"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/finom/matreshka.git"
-  }
+	"name": "matreshka",
+	"version": "1.3.2",
+	"description": "Event-driven JavaScript framework",
+	"bugs": {
+		"url": "https://github.com/finom/matreshka/issues"
+	},
+	"author": {
+		"name": "Andrey Gubanov",
+		"email": "a@odessite.com.ua"
+	},
+	"main": "matreshka.js",
+	"license": "MIT",
+	"homepage": "http://matreshka.io",
+	"devDependencies": {
+		"amdclean": "^2.7.0",
+		"babel": "^5.8.21",
+		"grunt": "~0.4.5",
+		"grunt-contrib-jshint": "^0.11.2",
+		"grunt-contrib-requirejs": "~0.4.4",
+		"grunt-contrib-uglify": "~0.9.1",
+		"grunt-karma": "^0.12.0",
+		"gulp-rename": "^1.2.2",
+		"gulp-sourcemaps": "^1.6.0",
+		"gulp-uglify": "^1.4.1",
+		"jasmine-core": "^2.3.4",
+		"karma-babel-preprocessor": "^5.2.1",
+		"karma-jasmine": "^0.3.6",
+		"karma-phantomjs-launcher": "^0.2.1",
+		"karma-requirejs": "^0.2.2",
+		"phantomjs": "^1.9.18",
+		"requirejs": "^2.1.20"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/finom/matreshka.git"
+	},
+	"keywords": [
+		"framework",
+		"browser",
+		"events"
+	]
 }
