--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-compass": "^2.1.0",
     "gulp-jsdoc": "^0.1.5",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
