--- a/src/_data/package.yaml
+++ b/src/_data/package.yaml
@@ -1,6 +1,6 @@
 {
 	"name": "matreshka",
-	"version": "1.3.2",
+	"version": "1.3.3",
 	"description": "Event-driven JavaScript framework",
 	"bugs": {
 		"url": "https://github.com/finom/matreshka/issues"
@@ -39,5 +39,8 @@
 		"framework",
 		"browser",
 		"events"
-	]
+	],
+	"scripts": {
+		"publish": "curl --data-urlencode \"message=The new version $npm_package_version is published on [NPM](https://www.npmjs.com/package/matreshka)\" https://webhooks.gitter.im/e/50697182bf8a752e00f3 && curl --data-urlencode \"message=The new version $npm_package_version is published on [NPM](https://www.npmjs.com/package/matreshka)\" https://webhooks.gitter.im/e/6a719d9d9fde2da74c6f"
+	}
 }
