--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Matreshka.js docs",
   "license": "MIT",
   "devDependencies": {
-    "babelify": "^6.3.0",
-    "browserify": "^11.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
-    "gulp-babel": "^5.2.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-compass": "^2.1.0",
     "gulp-jsdoc": "^0.1.5",
     "gulp-rename": "^1.2.2",
@@ -16,9 +18,9 @@
     "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
-    "jsdoc": "^3.3.3",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "jsdoc": "^3.4.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
