--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,9 @@
   "name": "ServeStaticContent",
   "version": "0.0.1",
   "dependencies": {
-    "babel-runtime": "^5.8.20",
     "compression": "^1.5.2",
-    "core-js": "^1.1.1",
     "express": "^4.13.3",
-    "jsdom": "^3.1.2"
+    "jsdom": "^3.1.2",
+    "mime-types": "^2.1.10"
   }
 }
