--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "jsdoc": "node script/jsdoc",
-    "bundle": "webpack"
+    "bundle": "webpack --config webpack/webpack.config.js"
   },
   "dependencies": {
     "matreshka": "^1.8.0"
