--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bundle": "webpack --config webpack/webpack.config.js"
   },
   "dependencies": {
+    "markdown-loader": "^0.1.7",
     "matreshka": "^1.8.0"
   }
 }
