--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "css-loader": "^0.23.1",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "install": "^0.8.1",
     "jsdoc": "^3.4.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "yaml-loader": "^0.4.0"
   },
   "scripts": {
     "jsdoc": "node script/jsdoc",
