--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bundle": "webpack --config webpack/webpack.config.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
+    "highlight.js": "^9.6.0",
     "markdown-loader": "^0.1.7",
     "matreshka": "^1.8.0"
   }
