--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdoc": "^3.4.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
+    "node-sass-asset-functions": "0.0.9",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
