--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^0.23.1",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "glob": "^7.0.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "install": "^0.8.1",
