--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "Matreshka.js docs",
   "license": "MIT",
+  "scripts": {
+    "jsdoc": "node script/jsdoc",
+    "clear": "rimraf dist html/*/temp",
+    "bundle": "npm run clear && webpack --config webpack/webpack.config.js",
+    "watch": "PORT=8110 NODE_ENV=development npm run bundle -- --watch",
+    "serve-dist": "http-server dist -o -s -d -p 8110",
+    "develop": "npm-run-all --parallel watch serve-dist"
+  },
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
@@ -15,23 +23,19 @@
     "glob": "^7.0.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
+    "http-server": "^0.9.0",
     "install": "^0.8.1",
     "jsdoc": "^3.4.0",
     "json-loader": "^0.5.4",
     "marked": "^0.3.6",
     "node-sass": "^3.8.0",
     "node-sass-asset-functions": "0.0.9",
+    "npm-run-all": "^3.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "yaml-loader": "^0.4.0"
-  },
-  "scripts": {
-    "jsdoc": "node script/jsdoc",
-    "clear": "rimraf dist html/*/temp",
-    "bundle": "npm run clear && webpack --config webpack/webpack.config.js",
-    "watch": "npm run bundle -- --watch"
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
