--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
+    "balajs": "^0.1.9",
+    "github-embed": "^0.1.2",
     "highlight.js": "^9.6.0",
     "markdown-loader": "^0.1.7",
-    "matreshka": "^1.8.0"
+    "matreshka": "^2.0.0-prealpha.27"
   }
 }
