--- a/package.json
+++ b/package.json
@@ -11,50 +11,52 @@
     "watch": "PORT=8110 NODE_ENV=development npm run bundle -- --watch",
     "serve-dist": "http-server dist -o -s -d -p 8110",
     "deploy": "pm2 deploy ecosystem.json production",
-    "develop": "npm-run-all --parallel watch serve-dist"
+    "develop": "npm-run-all --parallel watch serve-dist",
+    "check-updates": "ncu",
+    "upgrade": "npm run check-updates -- --upgradeAll && npm install"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-1": "^6.13.0",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "glob": "^7.0.5",
-    "html-loader": "^0.4.3",
+    "glob": "^7.0.6",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.9.0",
     "install": "^0.8.1",
-    "jsdoc": "^3.4.0",
+    "jsdoc": "^3.4.1",
     "json-loader": "^0.5.4",
     "marked": "^0.3.6",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.10.0",
     "node-sass-asset-functions": "0.0.9",
-    "npm-run-all": "^3.0.0",
+    "npm-check-updates": "^2.8.0",
+    "npm-run-all": "^3.1.0",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
+    "webpack": "^1.13.2",
     "yaml-loader": "^0.4.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "balajs": "^0.1.9",
-    "github-embed": "^0.1.10",
+    "github-embed": "^0.1.11",
     "highlight.js": "^9.6.0",
     "markdown-loader": "^0.1.7",
     "matreshka": "^2.0.0-prealpha.34"
-},
-"repository": {
-  "type": "git",
-  "url": "https://github.com/matreshkajs/matreshka.io.git"
-},
-"keywords": [],
-"license": "MIT",
-"bugs": {
-  "url": "https://github.com/matreshkajs/matreshka.io/issues"
-},
-"homepage": "https://github.com/matreshkajs/matreshka.io#readme"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matreshkajs/matreshka.io.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/matreshkajs/matreshka.io/issues"
+  },
+  "homepage": "https://github.com/matreshkajs/matreshka.io#readme"
 }
