--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_5e41bf3d8c4c_key -iv $encrypted_5e41bf3d8c4c_iv
   -in deploy_rsa.enc -out deploy_rsa -d
 addons:
-  ssh_known_hosts: matreshka.io
+  ssh_known_hosts: 188.166.42.252
 before_deploy:
 - npm install -g pm2
 - eval "$(ssh-agent -s)"
