--- a/html/en/page.yaml
+++ b/html/en/page.yaml
@@ -1,3 +1,3 @@
-title: Matreshka JavaScript Framework
-description: Feel the power of accessors. The first framework which is hacked JavaScript.
+title: Matreshka 2
+description: Matreshka.js 2 - The easiest framework in the Universe
 ga: UA-12418613-4
