--- a/html/ru/page.yaml
+++ b/html/ru/page.yaml
@@ -1,3 +1,3 @@
-title: Matreshka.js на русском
-description: Почувствуй силу акцессоров. Первый фреймворк, взломавший JavaScript.
+title: Matreshka.js 2 на русском
+description: Matreshka.js 2 - самый простой JavaScript фреймворк во вселенной
 ga: UA-12418613-5
