--- a/html/ua/page.yaml
+++ b/html/ua/page.yaml
@@ -1,3 +1,3 @@
-title: Matreshka.js 2 на русском
-description: Matreshka.js 2 - самый простой JavaScript фреймворк во вселенной
-ga: UA-12418613-5
+title: Matreshka.js 2 українською
+description: Matreshka.js 2 - найпростіший JavaScript фреймворк у Всесвіті
+ga: UA-12418613-7
