--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "upgrade": "npm run check-updates -- --upgradeAll && npm install"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
+    "babel-core": "^6.18.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-1": "^6.16.0",
-    "copy-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.25.0",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^7.1.1",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.24.0",
     "http-server": "^0.9.0",
     "jsdoc": "^3.4.2",
     "json-loader": "^0.5.4",
     "marked": "^0.3.6",
     "node-sass": "^3.10.1",
     "node-sass-asset-functions": "0.0.9",
-    "npm-check-updates": "^2.8.5",
-    "npm-run-all": "^3.1.0",
+    "npm-check-updates": "^2.8.6",
+    "npm-run-all": "^3.1.1",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "string-replace-loader": "^1.0.5",
@@ -50,7 +50,7 @@
     "highlight.js": "^9.7.0",
     "isomorphic-fetch": "^2.2.1",
     "markdown-loader": "^0.1.7",
-    "matreshka": "^2.0.0-prealpha.34"
+    "matreshka": "^2.0.0"
   },
   "repository": {
     "type": "git",
