--- a/package.json
+++ b/package.json
@@ -12,45 +12,44 @@
     "serve-dist": "http-server dist -o -s -d -p 8110",
     "deploy": "pm2 deploy ecosystem.json production",
     "develop": "npm-run-all --parallel watch serve-dist",
-    "check-updates": "ncu",
-    "upgrade": "npm run check-updates -- --upgradeAll && npm install"
+    "upgrade": "ncu -u -a && yarn install"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-1": "^6.16.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-1": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "ejs-compiled-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "glob": "^7.1.1",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
     "jsdoc": "^3.4.3",
     "json-loader": "^0.5.4",
     "marked": "^0.3.6",
-    "node-sass": "^3.13.0",
-    "node-sass-asset-functions": "0.0.9",
-    "npm-check-updates": "^2.8.8",
-    "npm-run-all": "^3.1.2",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.2",
-    "string-replace-loader": "^1.0.5",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
+    "node-sass": "^4.5.2",
+    "node-sass-asset-functions": "0.1.0",
+    "npm-check-updates": "^2.10.4",
+    "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
+    "string-replace-loader": "^1.1.0",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.2",
     "yaml-loader": "^0.4.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "balajs": "^0.1.9",
-    "es6-promise": "^4.0.5",
-    "github-embed": "^0.1.15",
-    "highlight.js": "^9.8.0",
+    "babel-polyfill": "^6.23.0",
+    "balajs": "^1.0.3",
+    "es6-promise": "^4.1.0",
+    "github-embed": "^0.2.0",
+    "highlight.js": "^9.10.0",
     "isomorphic-fetch": "^2.2.1",
-    "markdown-loader": "^0.1.7",
-    "matreshka": "^2.1.0"
+    "markdown-loader": "^2.0.0",
+    "matreshka": "^2.2.0"
   },
   "repository": {
     "type": "git",
