--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "string-replace-loader": "^1.1.0",
+    "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "yaml-loader": "^0.4.0"
