--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ branches:
 node_js:
 - '6'
 before_install:
+- npm install -g npm
 - openssl aes-256-cbc -K $encrypted_5e41bf3d8c4c_key -iv $encrypted_5e41bf3d8c4c_iv
   -in deploy_rsa.enc -out deploy_rsa -d
 addons:
