--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: npm run deploy && pm2 kill
+  script: npm run deploy; pm2 kill
   on:
     branch: master
