--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
   "scripts": {
     "clear": "rimraf dist html/*/temp",
     "test": "echo 'No test specified'",
-    "build": "npm run clear && webpack --config webpack/webpack.config.js",
+    "build": "npm run clear && webpack --config webpack/webpack.config.js --mode production",
     "watch": "PORT=8110 NODE_ENV=development npm run build -- --watch",
     "serve-dist": "http-server dist -o -s -d -p 8110",
     "deploy": "pm2 deploy ecosystem.json production --force",
     "develop": "npm-run-all --parallel watch serve-dist",
-    "upgrade": "ncu -u -a && npm install"
+    "upgrade": "ncu -u -a && npm install",
+    "reinstall": "rm -rf node_modules package-lock.json && npm i"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
+    "compile-ejs-loader": "0.0.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "ejs-compiled-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "ejs": "^2.6.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob": "^7.1.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -40,6 +43,7 @@
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
