--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
+    "source-map": "^0.7.3",
     "string-replace-loader": "^2.1.1",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.23.1",
