--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "build": "npm run clear && webpack --config webpack/webpack.config.js --mode production",
     "watch": "PORT=8110 NODE_ENV=development npm run build -- --watch",
     "serve-dist": "http-server dist -o -s -d -p 8110",
-    "deploy": "pm2 deploy ecosystem.json production --force",
+    "deploy": "npm run clear && deploy-to-git",
     "dev": "npm-run-all --parallel watch serve-dist",
     "upgrade": "ncu -u && npm install",
     "reinstall": "rm -rf node_modules package-lock.json && npm i"
+  },
+  "config": {
+    "deployToGit": {
+      "repository": "git@github.com:matreshkajs/matreshka.io.git",
+      "branch": "gh-pages",
+      "folder": "dist",
+      "script": "npm run build",
+      "commit": "Deployment",
+      "user": {
+        "email": "andrey@gubanov.eu",
+        "name": "Andrey Gubanov"
+      }
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -24,6 +37,7 @@
     "compile-ejs-loader": "0.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "deploy-to-git": "^0.1.5",
     "ejs": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob": "^7.1.6",
