fix: Some updates per Seemple.js

--- a/html/ru/page.yaml
+++ b/html/ru/page.yaml
@@ -1,3 +1,3 @@
-title: Seemple.js 2 на русском
-description: Seemple.js 2 - самый простой JavaScript фреймворк во Вселенной
+title: Seemple.js на русском
+description: Seemple.js - простой JavaScript фреймворк
 ga: UA-12418613-5
