--- a/html/en/page.yaml
+++ b/html/en/page.yaml
@@ -1,3 +1,3 @@
-title: Seemple.js 2
-description: Seemple.js 2 - The easiest framework in the Universe
+title: Seemple.js
+description: Seemple.js - A simple JavaScript framework
 ga: UA-12418613-4
