--- a/html/ua/page.yaml
+++ b/html/ua/page.yaml
@@ -1,3 +1,3 @@
-title: Seemple.js 2 українською
-description: Seemple.js 2 - найпростіший JavaScript фреймворк у Всесвіті
+title: Seemple.js українською
+description: Seemple.js - дуже сімпл фреймворк для створення односторінкових веб додатків
 ga: UA-12418613-7
